--- a/ps01/index.html
+++ b/ps01/index.html
@@ -8,7 +8,55 @@
 
 <body>
 
-    <!-- Your code goes here  -->
+    <svg width="600px" height="800px">
+        <!-- BLUE line insert-->
+        <line x1="400" x2="250" y1="350" y2="500" class="line", id="Line_BL1" style="stroke:cyan; stroke-width:8"></line>
+        <line x1="250" x2="100" y1="500" y2="500" class="line", ide="line_BL2" style="stroke:cyan; stroke-width:3; opacity: .5"></line>
+        <line x1="100" x2="100" y1="500" y2="800" class="line", ide="line_BL3" style="stroke:cyan; stroke-width:3; opacity: .5"></line>
+        <!-- BLUE insert end-->
+
+        <!-- BLACK Circle series-->
+        <circle cx="400" cy="200" r="50" class="circle", id="circle_B1"></circle>
+        <circle cx="400" cy="350" r="20" class="circle", id="circle_B2"></circle>
+        <circle cx="350" cy="400" r="10" class="circle", id="circle_B3"></circle>
+
+        <!-- BLUE Circle insert-->
+        <circle cx="250" cy="500" r="23" class="circle", id="circle_BL2" style="fill:cyan; opacity: 1"></circle>
+        <!-- BLUE insert end-->
+
+        <circle cx="250" cy="500" r="15" class="circle", id="circle_B4"></circle>
+        <circle cx="250" cy="620" r="12" class="circle", id="circle_B5"></circle>
+        <circle cx="350" cy="620" r="15" class="circle", id="circle_B6"></circle>
+        <circle cx="400" cy="720" r="25" class="circle", id="circle_B7"></circle>
+        <!-- BLACK line series-->
+
+        <line x1="400" x2="400" y1="200" y2="350" class="line", id="line_B1" style="stroke:black; stroke-width:3"></line>
+        <line x1="400" x2="250" y1="350" y2="500" class="line", id="line_B2" style="stroke:black; stroke-width:3"></line>
+        <line x1="250" x2="250" y1="500" y2="620" class="line", id="line_B3" style="stroke:black; stroke-width:3"></line>
+        <line x1="250" x2="350" y1="620" y2="620" class="line", id="line_B4" style="stroke:black; stroke-width:3"></line>
+        <line x1="350" x2="400" y1="620" y2="700" class="line", id="line_B5" style="stroke:black; stroke-width:3"></line>
+        <!-- MAGENTA Circle series-->
+        <circle cx="400" cy="0" r="60" class="circle", id="circle_M1" style="fill:magenta"></circle>
+        <circle cx="300" cy="150" r="15" class="circle", id="circle_M2" style="fill:magenta"></circle>
+        <circle cx="180" cy="150" r="22" class="circle", id="circle_M3" style="fill:magenta"></circle>
+        <circle cx="180" cy="450" r="22" class="circle", id="circle_M4" style="fill:magenta"></circle>
+        <circle cx="180" cy="700" r="22" class="circle", id="circle_M5" style="fill:magenta"></circle>
+        <circle cx="380" cy="550" r="50" class="circle", id="circle_M6" style="fill:magenta"></circle>
+        <!-- MAGENTA line series-->
+        <line x1="400" x2="300" y1="0" y2="150" class="line", id="Line_M1" style="stroke:magenta; stroke-width:5"></line>
+        <line x1="300" x2="180" y1="150" y2="150" class="line", id="Line_M2" style="stroke:magenta; stroke-width:5"></line>
+        <line x1="180" x2="180" y1="150" y2="700" class="line", id="Line_M3" style="stroke:magenta; stroke-width:5"></line>
+        <line x1="180" x2="380" y1="700" y2="550" class="line", id="Line_M4" style="stroke:magenta; stroke-width:5"></line>
+        <!-- BLUE Circle series-->
+        <circle cx="400" cy="350" r="150" class="circle", id="circle_BL1" style="fill:cyan; opacity:.5"></circle>
+        <circle cx="100" cy="500" r="25" class="circle", id="circle_BL3" style="fill:cyan; opacity:1"></circle>
+        <circle cx="100" cy="700" r="15" class="circle", id="circle_BL4" style="fill:cyan; opacity:1"></circle>
+        <circle cx="100" cy="800" r="80" class="circle", id="circle_BL5" style="fill:cyan; opacity:1"></circle>
+        <text fill="#ffffff" font-size="45" font-family="Verdana" x="50" y="800">SVG</text>
+        
+
+
+    </svg>
 
 </body>
 
