--- a/d3circles/index.html
+++ b/d3circles/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+<!--<svg width="600px" height="400px"></svg> -->
 
 
 </body>
 
-<script src="./index.js"></script>
+<script src="./index1.js"></script>
 
 </html>
