--- a/htmlcircles/index.html
+++ b/htmlcircles/index.html
@@ -7,9 +7,20 @@
 </head>
 
 <body>
+    <svg height="600px" width="700px">
+        <circle cx="400" cy="200" r="50" class="circle" id="circle1"></circle>
+        <circle cx="200" cy="100" r="20" class="circle" id="circle2"></circle>
+        <circle cx="500" cy="400" r="100" class="circle" id="circle3"></circle>
+        <defs>
+            <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
+                <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+            </linearGradient>
+        </defs>
+        <ellipse cx="300" cy="70" rx="85" ry="55" fill="url(#grad1)" stroke-width="3" stroke="green" opacity=".7"></ellipse>
+    </svg>
 
-
-</body>
+    </body>
 
 <script src="./index.js"></script>
 
