update the css file name

--- a/ps01/index.html
+++ b/ps01/index.html
@@ -3,7 +3,7 @@
 <link>
     <title>HTML circles</title>
 
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
